<resources>
    <string name="app_name">Brighams_Bears_Flashcards</string>
    <string name="next_area">Proceed to the next Screen</string>
    <string name="Congrats_Text">Congrats! You did it!</string>
    <string name="try_again_butt">Lets try that again</string>
    <string name="oh_no_text">Oh no!</string>
    <string name="back_home">Go back Home</string>
    <string name="Q_text">This is where the question will be</string>
    <string name="congrats_txt">Congrats!!! You did it</string>
    <string name="buttopt1">This is Option 1</string>
    <string name="buttopt2">This is Option 2</string>
    <string name="buttopt3">This is Option 3</string>
    <string name="buttopt4">This is Option 4</string>
    <string name="epoints">null</string>
    <string name="points_earned">Points So Far:</string>

</resources>