<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0BCAB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pointsTextCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="49dp"
        android:text="Points:"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Q_text"
        app:layout_constraintEnd_toStartOf="@+id/pointsCounter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/back_home"
        app:layout_constraintBottom_toTopOf="@+id/Q_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/rsz_1brigham_s_bears" />

    <TextView
        android:id="@+id/congrats_tx"
        android:layout_width="263dp"
        android:layout_height="130dp"
        android:text="@string/congrats_txt"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/next_area"
        android:layout_width="187dp"
        android:layout_height="83dp"
        android:backgroundTint="#FFFFFFFF"
        android:textColor="@android:color/black"
        android:text="@string/next_area"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congrats_tx"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:id="@+id/back_home_con"
        android:layout_width="144dp"
        android:layout_height="67dp"
        android:backgroundTint="#FFFFFFFF"
        android:textColor="@android:color/black"
        android:text="@string/back_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_area"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/pointsCountCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="95dp"
        android:text="null"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/congrats_tx"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/pointsTextCon"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>