<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0BCAB">

    <TextView
        android:id="@+id/pointsTextCon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="49dp"
        android:text="Points:"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Q_text"
        app:layout_constraintEnd_toStartOf="@+id/pointsCounter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_home"
        app:layout_constraintBottom_toTopOf="@+id/Q_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/rsz_1brigham_s_bears" />

    <TextView
        android:id="@+id/Oh_no"
        android:layout_width="327dp"
        android:layout_height="118dp"
        android:text="@string/oh_no_text"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <Button
        android:id="@+id/try_aga"
        android:layout_width="225dp"
        android:layout_height="99dp"
        android:text="@string/try_again_butt"
        android:backgroundTint="#FFFFFFFF"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Oh_no"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/back_home_trya"
        android:layout_width="152dp"
        android:layout_height="77dp"
        android:text="@string/back_home"
        android:backgroundTint="#FFFFFFFF"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/try_aga"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/tryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="62dp"
        android:text="null"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Oh_no"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/pointsTextCon2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>